Bug 62038 - SLIDESHOW: particular .eps images not shown
Summary: SLIDESHOW: particular .eps images not shown
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: x86-64 (AMD64) All
: highest critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.3.0 target:4.2.5
Keywords: bibisected, regression
: 66555 69385 71855 76359 76942 78236 (view as bug list)
Depends on:
Blocks: Images-EPS 64161 mab4.2
  Show dependency treegraph
 
Reported: 2013-03-08 21:11 UTC by Jose
Modified: 2017-10-21 22:52 UTC (History)
19 users (show)

See Also:
Crash report or crash signature:


Attachments
Example presentation with eps image (13.81 KB, application/vnd.oasis.opendocument.presentation)
2013-03-08 21:11 UTC, Jose
Details
eps file made with matplotlib (13.79 KB, application/postscript)
2014-01-28 09:36 UTC, sam tygier
Details
test ODP impress with inserted EPS and EMF (120.15 KB, application/vnd.oasis.opendocument.presentation)
2014-04-30 05:51 UTC, V Stuart Foote
Details
Export to PDF of test ODP impress with inserted EPS and EMF (110.96 KB, application/pdf)
2014-04-30 05:51 UTC, V Stuart Foote
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jose 2013-03-08 21:11:22 UTC
Created attachment 76191 [details]
Example presentation with eps image

I just upgraded to 4.0.1 and I noticed that eps files don't display at all in presentation mode. They display fine in edit mode.
It used to work fine in 3.6.5.

I attach an example presentation with an eps file in it. I see it in edit mode, but when I press F5 the image doesn't display.
Comment 1 Rainer Bielefeld Retired 2013-03-09 09:35:36 UTC
More or less [Reproducible] with Server Installation of "LibO  4.0.0.3   -  GERMAN UI / German Locale  [Build ID: 7545bee9c2a0782548772a21bc84a9dcc583b89)]"  {tinderbox: @6, pull time 2013-01-31 11:30(?)} on German WIN7 Home Premium (64bit) with separate  new User Profile:
In Edit mode I see brown rectangle borders (what probably is a separate bug, the picture should show a chart graph "Pointspread function"), in SLIDESHOW the picture is not visible at all, no placeholder, nothing!

@Thorsten:
Please change  Status to ASSIGNED and add yourself to "Assigned To" if you accept this Bug or forward the Bug if it's not your turf
Comment 2 Rick 2013-03-28 16:30:13 UTC
eps images were made using R. They show in the slide editing mode but not in slideshow. Also missing when exporting to pdf.
Comment 3 Jose 2013-04-05 16:56:51 UTC
Bug is still present with version 4.0.2
Comment 4 Jose 2013-04-17 17:00:27 UTC
I also noticed that the plots from .eps files disappear when I save the file as PDF.

- I select "Export as PDF" in the File menu
- It creates a pdf file but the plot from the .eps doesn't show.
Comment 5 Jose 2013-04-17 17:12:01 UTC
(In reply to comment #4)
> I also noticed that the plots from .eps files disappear when I save the file
> as PDF.
> 
> - I select "Export as PDF" in the File menu
> - It creates a pdf file but the plot from the .eps doesn't show.

The same problem happens when exporting to PDF with Writer.

Btw, this bug seems similar to:
Bug #62499 - : EPS images are not shown when PDF is exported
Comment 6 Jose 2013-05-10 18:20:27 UTC
Bug still there in 4.0.3
Comment 7 Jose 2013-06-20 16:03:07 UTC
Bug still there in 4.0.4
Comment 8 ign_christian 2013-07-05 13:58:18 UTC
*** Bug 66555 has been marked as a duplicate of this bug. ***
Comment 9 Mark van Rossum 2013-07-12 11:22:28 UTC
Also a bug for me on Fedora 19 with 
libreoffice-impress-4.1.0.1-8.fc19.x86_64

I noticed that this happens when you have a picture that is a metafile.
(when you click it, bottom left shows 'metafile selected') 

A very clunky work-around is to copy, and then 'paste special' as bitmap.
Comment 10 Michael Hanscho 2013-08-13 01:00:07 UTC
In Version 4.1.0.4
Build ID: 89ea49ddacd9aa532507cbf852f2bb22b1ace28  running on OpenSuSE Linux eps images are not visible in presentation mode nor are they in an exported pdf.
Comment 11 Jose 2013-08-23 21:01:27 UTC
Just tested version 4.0.5.2 and bug is still there.
Comment 12 Jose 2013-09-01 16:01:41 UTC
Bug still there in 4.1.1.2
Comment 13 ign_christian 2013-09-19 13:43:29 UTC
*** Bug 69385 has been marked as a duplicate of this bug. ***
Comment 14 Michael Stahl 2013-10-04 10:38:50 UTC
adjust version according to comment #1
Comment 15 Charlie Hagedorn 2013-11-13 23:11:46 UTC
Still present in LibreOffice 4.1.2.3 410m0(Build:3) on Debian. This forces a downgrade for this user.
Comment 16 Julien Nabet 2013-12-10 21:10:45 UTC
On pc Debian x86-64 with master sources updated today, I can reproduce this.
During file opening, I noticed this:
warn:legacy.osl:5132:1:sal/osl/unx/file.cxx:341: FileHandle_Impl::readAt(): not seekable

and this when doing F5:
warn:sfx.control:5132:1:sfx2/source/control/dispatch.cxx:1530: Childwindow slot missing: 10365
warn:sfx.control:5132:1:sfx2/source/control/dispatch.cxx:1530: Childwindow slot missing: 10365
Comment 17 Björn Michaelsen 2014-01-17 00:43:55 UTC
(This is an automated message.)

LibreOffice development currently prioritizes bugs with the so called MAB (most annoying bugs) -- as this bug has not run through that process (including writing a short rationale for this bug being a candidate and other who are watching the tracker bug silently approving that rationale etc.) its priority is set to high. Note this is effectively no change in the urgency assigned to this bug, as we are currently not making a difference between high and highest and severity is untouched.

You can find out more about MABs and how the process works by contacting libreoffice qa on irc:

 http://webchat.freenode.net/?channels=libreoffice-qa

The QA wiki page also gives you hints on how to get in contact with the team (if IRC fails you, your next best choice is the mailing list):

 https://wiki.documentfoundation.org/QA
Comment 18 sam tygier 2014-01-28 09:36:33 UTC
Created attachment 92912 [details]
eps file made with matplotlib

Here is a simple eps file made with matplotlib. If I drop it into an impress slide then it shows in edit mode, but is not visible in presentation mode.

tested on 4.1 and 4.2.0.3 on fedora 20 linux.
Comment 19 Terrence Enger 2014-03-30 23:08:23 UTC
From `git bisect bad`:
--------------------
 3f239c0dbc91ea922758438ecbddf6dc7203c268 is the first bad commit
commit 3f239c0dbc91ea922758438ecbddf6dc7203c268
Author: Bjoern Michaelsen <bjoern.michaelsen@canonical.com>
Date:   Tue Dec 11 01:59:31 2012 +0000

    source-hash-ae4e4a11d4300f7448cb6bd170fcb034542caddc
    
    commit ae4e4a11d4300f7448cb6bd170fcb034542caddc
    Author:     Rene Engelhard <rene@debian.org>
    AuthorDate: Tue Nov 6 21:24:32 2012 +0100
    Commit:     Rene Engelhard <rene@debian.org>
    CommitDate: Tue Nov 6 21:24:32 2012 +0100
    
        typo...
    
        Change-Id: I2c7968194afbcf74967cd16c639dce7de858a513

:100644 100644 c09b92a8ddf24b8738a7cd3a695ae1e4482d354c 6b13afd13f023cedac65a896318de4aa55dead27 M	autogen.log
:100644 100644 bcee1e11bd693642ca5a6330175b58082e5dcdd0 54d2377f5b3afd6ed668b3e24cb877c289119ec5 M	ccache.log
:100644 100644 75677cef16786d2cc95c0d8f301482278ca055c3 d18a6ebcd3b8537c3dd3dbc16e862fb6370ecb8a M	commitmsg
:100644 100644 83b4ecc0ecb3e031c804d49f45f854e95d5cc961 d482c00e5fff6081c6b87b637fd9ffaf3e1e2c6c M	dev-install.log
:100644 100644 91437b9974ffada7e049273419bb8c66c91c0539 abf45ab9609c77a5ab952aa310eafe8c2ffaf85c M	make.log
:040000 040000 45c0bab8b669778ab523c8f65a25e8c9afde604a f4bfa15b2f72d3df5675b07bcf32254a819b9d19 M	opt


From `git bisect log`:
--------------------

# bad: [793dbf6f80f497dfe587d560d6257f42a24273f6] source-hash-1581b1fc3ac82a7bd62df968226e98604a4ca52d
# good: [65fd30f5cb4cdd37995a33420ed8273c0a29bf00] source-hash-d6cde02dbce8c28c6af836e2dc1120f8a6ef9932
git bisect start 'latest' 'oldest'
# bad: [8092559c5013969ebda017d79200463b9b975038] source-hash-fd84daf696a368c2c7561b5253b32a63ecdeca4a
git bisect bad 8092559c5013969ebda017d79200463b9b975038
# good: [2bdbcaf93e4616633a733de7eb88ba19571929ac] source-hash-cf04745f7a027594fd64a493c276a8280dbccfe1
git bisect good 2bdbcaf93e4616633a733de7eb88ba19571929ac
# good: [f823dd19086ed09fb8e2072050e963cf1bfcd5fe] source-hash-b679a2a02180c017bd8b596fb2e4f283bad93b75
git bisect good f823dd19086ed09fb8e2072050e963cf1bfcd5fe
# good: [8cf46b05e525ac3602433613f227f0dcacc44035] source-hash-1692cf6854ff7adbb2bd47f2f7ec2b3de51864f3
git bisect good 8cf46b05e525ac3602433613f227f0dcacc44035
# bad: [3cb56a12a43a7c2a43954dc7694a6f6bde544f98] source-hash-41c2b0375773b2d2945d75e255ea6bb6c7fd378d
git bisect bad 3cb56a12a43a7c2a43954dc7694a6f6bde544f98
# bad: [6178060e0e995b23fb5fe35c52b1fba67bd0760d] source-hash-44b96a2fce52b6e3e683dc917fab219cf75001db
git bisect bad 6178060e0e995b23fb5fe35c52b1fba67bd0760d
# good: [c01053e32bdb3d0b413b71ddde869618fa5d2624] source-hash-4316e643ef345b0f673b4a03a80a4b7cb3185588
git bisect good c01053e32bdb3d0b413b71ddde869618fa5d2624
# bad: [8125b06dfe80e260ff2108fab3c85eb03ec2608b] source-hash-683758efb22d08a4cf211a6d985148f513da2a90
git bisect bad 8125b06dfe80e260ff2108fab3c85eb03ec2608b
# bad: [3f239c0dbc91ea922758438ecbddf6dc7203c268] source-hash-ae4e4a11d4300f7448cb6bd170fcb034542caddc
git bisect bad 3f239c0dbc91ea922758438ecbddf6dc7203c268
Comment 20 sophie 2014-04-02 14:53:37 UTC
*** Bug 76359 has been marked as a duplicate of this bug. ***
Comment 21 Uwe Dippel 2014-04-25 12:43:27 UTC
Wow, we have a 'solution'!!?  ;-)

With Ubuntu 14.04 (LO 4.2.3.3) when I open my old .odp files containing eps and svg images, I get an Error:
"General Error. General input/output error." and that's it.

The solution here is, that files showing wrong svg-s and eps-s earlier, by now do not load at all any longer.
Meaning, files created with LO 3.6 simply cannot open any longer. I don't know if this really has to do with this bug, but I think so, since all other files (not containing these image types) open properly. 

I wonder, if this ought not be put at the upper echelon of all bugs!?
Comment 22 taka 2014-04-25 20:39:44 UTC
Then, the name of this software should be changed.
We cannot call this software as LibreOffice 4.
You can call this, for example, LimitOffice, PityOffice, 
whatever you want, but other than LibreOffice.
The reason is so obvious that I don't need to say.
Is somebody doesn't understand, I will write.
Comment 23 Uwe Dippel 2014-04-25 21:26:15 UTC
@taka:

Yep. I noticed you re-opened because someone had 'dup'-ed 76359 to here. 
The problem does apply to ALL AND ANY .eps here; and to ALL AND ANY .svg here; though the .svg-s are often only modified, cut off on a margin, or whatnot.

I agree, a software that runs happily without .eps and without .svg is totally useless, at least to me: because these are features that MS Office had always neglected. I, as computer scientist, consider all sorts of .jp[e]g and stuff child-play. The only useful and sustainable method to draw an image is one with infinite resolution; not a pixel- or block-based 'little helper'. 
With Libreoffice falling back to the lowly abilities of MS Office, I fail to see any reason to stick with it. (I know what I'll hear next: "that's the beauty of choice!") But those voices will be voices of nincompoops, because regression is not "choices" but sh***y project management.
Comment 24 Rick 2014-04-26 07:15:51 UTC
It's because of bugs like this that I don't think LibreOffice is viable for scientific work. I'm not sure why I stopped using Latex but it is clearly superior to LibreOffice (and MS Office). Also, now there are many web sites that let you collaborate on Latex documents (for free). With the ease of interweaving R computations and graphics into documents, there is really no reason to use LibreOffice. The fact that this bug has not been fixed in over a year (and the maintainers of LibreOffice could not care less) clearly means that LibreOffice is not being used by researchers. So I've re-learned how to use Latex and doubt I'll ever use LibreOffice again. (MS Office is even worse - you can't format numbers in Word tables - explains why you see so many poorly designed tables.)
Comment 25 Julien Nabet 2014-04-26 07:47:49 UTC
Let's give more visibility to this bug by nominating it as MAB.
Here are some reasons:
- old bug
- regression
- impacts at least a whole category of users (scientific ones)
- no workaround
- seems to happen with every eps file (if not, any example of an odp containing eps which works well?)
About this last one, if it's confirmed, we should change the title of this tracker and indicate that all eps are concerned and so fdo#76359 would be a dup indeed.
Thorsten/Caolán: I don't know if it's a rendering/vcl problem or Impress/Draw specific pb.
Comment 26 V Stuart Foote 2014-04-26 21:25:47 UTC
As noted on bug 62051, with the ImageMagick application installed, Windows builds of LibreOffice do import and render EPS content into Impress, Writer and Draw.

But can confirm that for Windows builds of LibreOffice with ImageMagick also installed--they do not render slide elements during Slide show presentation wef. the 3.6.x -> 4.0.0 transition.
 
On Windows 7 sp1, 64-bit
The "RNE Sample for bug 47368.odp" from Roman E's 2012-11-28 Test kit, and "example-eps-problem.odp" example presentation attached to this bug renders correctly in both edit and during slideshow with Version 3.6.5.2 (Build ID: 5b93205). And are also both correctly rendered in edit and Slideshow mode in
Version 3.6.7.2 (Build ID: e183d5b).

On the same system for the two presentations the EPS render in edit mode but do not render (i.e. no image rendered just the slide title) for the 
Version 4.0.6.2 (Build ID: 2e2573268451a50806fcd60ae2d9fe01dd0ce24) build.

On the same system the EPS renders in edit mode but is not rendered in Slideshow
Version: 4.1.5.3
Build ID: 1c1366bba2ba2b554cd2ca4d87c06da81c05d24

Finally on the same Windows system EPS no longer renders in edit mode nor slideshow mode. Just a black image fill is present in edit mode--and slide has no image.
Version: 4.2.0.4
Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
Comment 27 Jean-Baptiste Faure 2014-04-27 09:14:15 UTC
Even if the eps file contains a bitmap preview, it does not work. :-(

Until the bug is corrected, you have the following workaround for new presentations: use Draw to convert your EPS file in bitmap.
step 1: insert the eps image in a new Draw document
step 2: select and copy the image by ctrl+C
step 3: go to Impress and do paste special as bitmap.

Best regards. JBF
Comment 28 V Stuart Foote 2014-04-27 15:03:27 UTC
*** Bug 76359 has been marked as a duplicate of this bug. ***
Comment 29 Jean-Baptiste Faure 2014-04-28 10:41:21 UTC
*** Bug 71855 has been marked as a duplicate of this bug. ***
Comment 30 Uwe Dippel 2014-04-28 11:01:00 UTC
I wonder if we should add the bug reports on identically the same problem with SVG (including mine) as dups here? When I search the bug list for SVG, I hit a good number of people who have likewise lost all abilities to show/export SVG-s.
(e.g. 62284, 64075, 76988, 76353)

Before that, someone with more insight ought to confirm that both are actually linked. At least here, using EPS and SVG, both disappeared at the same time from my slide shows and exports - with the up[down]grade from 3.6 to 4.X.X.

And someone to change the title, please. This applies to all images; it is a generic problem. The title suggests otherwise. This is why it failed to jump onto the MAB list (which currently contains items with much lower blocker capabilities).
Comment 31 Jean-Baptiste Faure 2014-04-28 15:39:11 UTC
*** Bug 76942 has been marked as a duplicate of this bug. ***
Comment 32 Commit Notification 2014-04-29 09:17:27 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3db00c554b38ee6c1b6e969768da53db4dc2f92a

Resolves: fdo#62038 EPS not rendered in drawinglayer code paths



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 33 Commit Notification 2014-04-29 10:44:06 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3bedb85460b028500ff450eeeb80acf8278df39e&h=libreoffice-4-2

Resolves: fdo#62038 EPS not rendered in drawinglayer code paths


It will be available in LibreOffice 4.2.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 34 V Stuart Foote 2014-04-30 05:51:04 UTC
Created attachment 98206 [details]
test ODP impress with inserted EPS and EMF

confirming resolved fixed on Windows 7 sp1, 64-bit
Version: 4.3.0.0.alpha1+
Build ID: 0b03f7ed575838f90e6b1ebec3538a3a214f81fb
TinderBox: Win-x86@39, Branch:master, Time: 2014-04-30_01:30:46

However, several helper files are required

pstoedit -- pstoedit.exe ( http://sourceforge.net/projects/pstoedit/files/pstoedit/ )
GhostScript -- gswin32c.exe  ( http://www.ghostscript.com/download/gsdnld.html )
ImageMagick -- convert.exe  ( http://www.imagemagick.org/script/binary-releases.php#windows )

test ODP impress with inserted EPS and example EMF renderings, and resulting PDF export attached
Comment 35 V Stuart Foote 2014-04-30 05:51:56 UTC
Created attachment 98207 [details]
Export to PDF of test ODP impress with inserted EPS and EMF
Comment 36 Uwe Dippel 2014-04-30 07:15:03 UTC
Good, that's a starting point ...

Can someone please be good enough to also test on Linux; and, pleeeeze, with SVGs (e.g. the very simple one that I attached to my bug report, and would de-scale the whole picture when opened with 4.X.X)?
Comment 37 Jean-Baptiste Faure 2014-04-30 08:04:07 UTC
Confirming resolved fixed for master and version 4.2.5.0.0+ under Linux. Tested with Ubuntu 14.04 x86-64.

Thank you very much Caolán !!!

Best regards. JBF
Comment 38 V Stuart Foote 2014-04-30 09:02:21 UTC
Uwe,
(In reply to comment #36)
> Good, that's a starting point ...
> 
> Can someone please be good enough to also test on Linux; and, pleeeeze, with
> SVGs (e.g. the very simple one that I attached to my bug report, and would
> de-scale the whole picture when opened with 4.X.X)?

Caolan worked it up on Linux, so pretty sure it is covered there.

Quality of SVGs really are another issue. Have the outstanding MAB 4.1 bug 62461 for handling SVG previews (wef 4.0.0 converting to PNG rather than rendering as vector) on hold to "do it right in 4.2"
Comment 39 Uwe Dippel 2014-04-30 09:32:38 UTC
Alas, so the troubles with the transitions 3.6 to 4.X.X remain unresolved for me, and a number of others in the scientific community (see comment 24, by Rick), since my images are mostly in svg, and rendered 'okay' earlier. 

Yes, I filed the svg bug as well, last year. As of now, it seems to be quite unnoticed.

(Could it be that LO has a problem with QA and QC?)
Comment 40 retired 2014-04-30 11:17:29 UTC
Uwe, there's only one way for an opensource project to go: one bug at a time and priorities have to be set facing over 9k open bugs.

Please link the remaining bugs you are referring to and let this one rest since it is fixed.

Open other bugs for any remaining bugs not already filed. thanks
Comment 41 Jean-Baptiste Faure 2014-04-30 14:46:39 UTC
(In reply to comment #39)
> [...]
> (Could it be that LO has a problem with QA and QC?)

The problem is that too many users do not consider useful to contribute to QA ...

I commented your bug report closed as duplicate of this one : https://bugs.freedesktop.org/show_bug.cgi?id=69385#c8

Best regards. JBF
Comment 42 Julien Nabet 2014-05-04 05:36:01 UTC
*** Bug 78236 has been marked as a duplicate of this bug. ***
Comment 43 taka 2014-05-04 07:11:00 UTC
I wish the patch applied to also ver. 4.1.X because this bug is so serious that people cannot use.
Comment 44 Julien Nabet 2014-05-19 20:22:04 UTC
taka: 4.1.6 is the last official LO version from TDF to be released (see https://wiki.documentfoundation.org/ReleasePlan#4.1_release) so the patch can only backported in unofficial TDF versions.
Comment 45 Sebastiaan Lokhorst 2014-08-30 21:50:29 UTC
This bug is (still ?) present in 4.3.1 on Windows and OS X.
When opening presentation mode, my .eps images do not show on Windows (8) and OS X (x86_64, 10.9). On Linux (x86_64, Arch) however, the images show fine.

In edit mode, everything is fine. SVGs also show fine in both modes on all OSs.
Comment 46 V Stuart Foote 2014-08-30 22:57:06 UTC
(In reply to comment #45)
> This bug is (still ?) present in 4.3.1 on Windows and OS X.
> When opening presentation mode, my .eps images do not show on Windows (8)
> and OS X (x86_64, 10.9). On Linux (x86_64, Arch) however, the images show
> fine.
> 
> In edit mode, everything is fine. SVGs also show fine in both modes on all
> OSs.

See comment 34 for the list of "helper" files that ARE necessary to be installed on Windows. And, on OSX IIRC both ghostscript and pstoedit will be necessary (have always been necessary) to work with .EPS files in OOo, AOO and LibreOffice.

Resetting this issue resolved fixed -- so please follow along with bug 67464
Comment 47 Peter Hiscocks 2014-08-31 02:21:55 UTC
This now works on Linux Mint, but you have to upgrade from the ppa. The
current version still has the bug.

Here's how I did it.

sudo apt-get remove libreoffice
sudo apt-get install python-software-properties
sudo apt-add-repository pp:libreoffice/libreoffice-4-3
  (Notice, not -4-2)
sudo apt-get update

Peter

> https://bugs.freedesktop.org/show_bug.cgi?id=62038
>
> V Stuart Foote <vstuart.foote@utsa.edu> changed:
>
>            What    |Removed                     |Added
> ----------------------------------------------------------------------------
>              Status|REOPENED                    |RESOLVED
>          Resolution|---                         |FIXED
>
> --- Comment #46 from V Stuart Foote <vstuart.foote@utsa.edu> ---
> (In reply to comment #45)
>> This bug is (still ?) present in 4.3.1 on Windows and OS X.
>> When opening presentation mode, my .eps images do not show on Windows
>> (8)
>> and OS X (x86_64, 10.9). On Linux (x86_64, Arch) however, the images
>> show
>> fine.
>>
>> In edit mode, everything is fine. SVGs also show fine in both modes on
>> all
>> OSs.
>
> See comment 34 for the list of "helper" files that ARE necessary to be
> installed on Windows. And, on OSX IIRC both ghostscript and pstoedit will
> be
> necessary (have always been necessary) to work with .EPS files in OOo, AOO
> and
> LibreOffice.
>
> Resetting this issue resolved fixed -- so please follow along with bug
> 67464
>
> --
> You are receiving this mail because:
> You are on the CC list for the bug.
>
Comment 48 Robinson Tryon (qubit) 2015-12-17 07:12:26 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]