Resolves: fdo#62038 EPS not rendered in drawinglayer code paths

It attempts to see if the outputdevice can draw the true EPS
but if the outputdevice is in record-only mode it just stashs a
new eps metaaction, and this time with no fallback image, and
happily returns ok so the drawing layer ends up with a new
replacement eps metaction, except with no preview anymore.

Perhaps DrawEPS should return false here, but its safer this way

Change-Id: I0e0b16e4b2be00802a1af1f8147500d816a3c5de